--- a/charts/containerum/requirements.yaml
+++ b/charts/containerum/requirements.yaml
@@ -14,7 +14,7 @@ dependencies:
       - mongo
       - platform
   - name: api-gateway
-    version: "~v1.0.0"
+    version: "v1.0.1-rc.0"
     repository: https://charts.containerum.io
     tags:
       - back
