--- a/charts/containerum/values.yaml
+++ b/charts/containerum/values.yaml
@@ -1,44 +1,46 @@
 tags:
   db: false
-  platform: false
+  platform: true
   platformdb: true
-  postgresql: true
-  mongo: true
-  mail: true
-  user: true
-  permissions: true
-  resource: true
-  kube: true
-  gateway: true
-  auth: true
-  ui: true
 
 ingress:
   ui:
     enabled: true
-    annotations: {}
-      # kubernetes.io/ingress.class: nginx
+    annotations:
+      kubernetes.io/ingress.class: nginx
       # kubernetes.io/tls-acme: "true"
     path: /
     hosts:
-      - example.com
+      - local.containerum.io
     tls: []
     #  - secretName: chart-example-tls
     #    hosts:
     #      - chart-example.local
   api:
     enabled: true
-    annotations: {}
-      # kubernetes.io/ingress.class: nginx
+    annotations:
+      kubernetes.io/ingress.class: nginx
       # kubernetes.io/tls-acme: "true"
     path: /
     hosts:
-      - api.example.com
+      - api.local.containerum.io
     tls: []
     #  - secretName: chart-example-tls
     #    hosts:
     #      - chart-example.local
 
+
+ui:
+  env:
+    local:
+      ## Default user country
+      COUNTRY: US
+      ## for HTTPS use: ssl
+      API_PROTOCOL_TYPE: no-ssl
+      API_PORT: null
+    global:
+      API_HOST: api.local.containerum.io
+      RECAPTCHA: null
 
 mail:
   persistence:
