--- a/charts/containerum/requirements.yaml
+++ b/charts/containerum/requirements.yaml
@@ -21,49 +21,49 @@ dependencies:
       - gateway
       - platform
   - name: user-manager
-    version: "v1.0.0-rc.6"
+    version: "v1.0.1-rc.0"
     repository: https://charts.containerum.io
     tags:
       - back
       - user
       - platform
   - name: resource
-    version: "v1.0.0-rc.7"
+    version: "v1.0.1-rc.0"
     repository: https://charts.containerum.io
     tags:
       - back
       - resource
       - platform
   - name: permissions
-    version: "v1.0.0-rc.5"
+    version: "v1.0.0"
     repository: https://charts.containerum.io
     tags:
       - back
       - permissions
       - platform
   - name: kube
-    version: "v1.0.0-rc.1"
+    version: "v1.0.1-rc.0"
     repository: https://charts.containerum.io
     tags:
       - back
       - kube
       - platform
   - name: auth
-    version: "v1.0.0-rc.1"
+    version: "v1.0.0"
     repository: https://charts.containerum.io
     tags:
       - back
       - auth
       - platform
   - name: mail
-    version: "v1.0.0-rc.2"
+    version: "v1.0.0"
     repository: https://charts.containerum.io
     tags:
       - back
       - mail
       - platform
   - name: ui
-    version: "v1.0.0-rc.2"
+    version: "v1.0.1-rc.0"
     repository: https://charts.containerum.io
     tags:
       - front
