--- a/charts/containerum/requirements.yaml
+++ b/charts/containerum/requirements.yaml
@@ -1,14 +1,14 @@
 dependencies:
   - name: postgresql
-    repository: https://kubernetes-charts.storage.googleapis.com
-    version: 0.12.0
+    repository: https://charts.containerum.io
+    version: 0.15.0
     tags:
       - db
       - postgresql
       - platform
   - name: mongodb
-    version: "2.0.6"
-    repository: https://kubernetes-charts.storage.googleapis.com
+    version: "3.0.4"
+    repository: https://charts.containerum.io
     tags:
       - db
       - mongo
