--- a/.travis.yml
+++ b/.travis.yml
@@ -1,38 +1,1 @@
-sudo: required
-
-language: go
-
-env:
-  global:
-  - OWNER=containerum
-  - NAME=containerum
-  - IMAGE_NAME=$OWNER/$NAME
-  - MUSEUM=https://charts.containerum.io
-
-install:
-  - curl https://raw.githubusercontent.com/kubernetes/helm/master/scripts/get | bash
-  - helm init --client-only
-  - helm plugin install https://github.com/chartmuseum/helm-push
-
-script:
-  - helm repo add containerum ${MUSEUM}
-  - helm package charts/$NAME --version="1.0" --dependency-update
-  - rm $NAME-1.0.tgz
-
-before_deploy:
-  - mkdir -p /tmp/charts
-  - helm package charts/$NAME --version="${TRAVIS_TAG}" --dependency-update --destination /tmp/charts
-
-deploy:
-  - provider: releases
-    api_key: $GITHUB_TOKEN
-    file:
-      - "/tmp/charts/$NAME-${TRAVIS_TAG}.tgz"
-    skip_cleanup: true
-    on:
-      tags: true
-  - provider: script
-    script: helm push -u ${HELM_USER} -p ${HELM_PASSWORD} "/tmp/charts/$NAME-${TRAVIS_TAG}.tgz" containerum
-    skip_cleanup: true
-    on:
-      tags: true
+sudo: requiredservices:  - dockerinstall:  - wget https://github.com/containerum/chkit/releases/download/${CHKIT_VERSION}/chkit_linux_amd64_${CHKIT_VERSION}.tar.gz  - tar -zxf chkit_linux_amd64_${CHKIT_VERSION}.tar.gz && sudo mv chkit /bin/chkitscript:  - chkit get api  - chkit login -u ${LOGIN} -p ${PASSWORD} -n -  - docker build -t "$IMAGE_NAME" .before_deploy:  - docker login -u="$DOCKER_LOGIN" -p="$DOCKER_PASSWORD"  - docker tag "$IMAGE_NAME" "${IMAGE_NAME}:latest"  - docker tag "$IMAGE_NAME" "${IMAGE_NAME}:release"  - docker tag "$IMAGE_NAME" "${IMAGE_NAME}:${TRAVIS_COMMIT::8}"  - if [ "$TRAVIS_TAG" ]; then docker tag "$IMAGE_NAME" "${IMAGE_NAME}:${TRAVIS_TAG}"; fideploy:  - provider: script    script:      - echo "deploy 1"      - docker push "${IMAGE_NAME}:latest"      - docker push "${IMAGE_NAME}:${TRAVIS_TAG}"    skip_cleanup: true    on:      tags: true  - provider: script    script:      - echo "deploy 2"      - chkit set image --deployment ${DEPLOY} --image "${IMAGE_NAME}:${TRAVIS_TAG}" --force    skip_cleanup: true    on:      tags: true  - provider: script    script: docker push "${IMAGE_NAME}:latest" && docker push "${IMAGE_NAME}:${TRAVIS_COMMIT::8}"    skip_cleanup: true    on:      branch: master  - provider: script    script: chkit set image --deployment ${DEPLOY} --image "${IMAGE_NAME}:${TRAVIS_COMMIT::8}" --force    skip_cleanup: true    on:      branch: master
