--- a/charts/containerum/requirements.yaml
+++ b/charts/containerum/requirements.yaml
@@ -63,7 +63,7 @@ dependencies:
       - mail
       - platform
   - name: ui
-    version: "v1.0.5-rc.1"
+    version: "v1.0.5-rc.3"
     repository: https://charts.containerum.io
     tags:
       - front
@@ -77,7 +77,7 @@ dependencies:
       - nodemetrics
       - platform
   - name: volume
-    version: "1.0.0"
+    version: "1.0.0-rc.3"
     repository: https://charts.containerum.io
     tags:
       - back
