--- a/charts/containerum/requirements.yaml
+++ b/charts/containerum/requirements.yaml
@@ -21,28 +21,28 @@ dependencies:
       - gateway
       - platform
   - name: user-manager
-    version: "v1.0.3"
+    version: "v1.0.4"
     repository: https://charts.containerum.io
     tags:
       - back
       - user
       - platform
   - name: resource
-    version: "v1.0.3"
+    version: "v1.0.4"
     repository: https://charts.containerum.io
     tags:
       - back
       - resource
       - platform
   - name: permissions
-    version: "v1.0.2"
+    version: "v1.0.3"
     repository: https://charts.containerum.io
     tags:
       - back
       - permissions
       - platform
   - name: kube
-    version: "v1.0.5"
+    version: "v1.0.6"
     repository: https://charts.containerum.io
     tags:
       - back
@@ -56,14 +56,14 @@ dependencies:
       - auth
       - platform
   - name: mail
-    version: "v1.0.1"
+    version: "v1.0.2"
     repository: https://charts.containerum.io
     tags:
       - back
       - mail
       - platform
   - name: ui
-    version: "v1.0.5-rc.3"
+    version: "v1.0.6-rc.1"
     repository: https://charts.containerum.io
     tags:
       - front
@@ -77,7 +77,7 @@ dependencies:
       - nodemetrics
       - platform
   - name: volume
-    version: "1.0.0-rc.3"
+    version: "1.0.0"
     repository: https://charts.containerum.io
     tags:
       - back
