--- a/charts/containerum/values.yaml
+++ b/charts/containerum/values.yaml
@@ -53,6 +53,8 @@ mail:
     global:
       CH_MAIL_SMTP_ADDR: null
       CH_MAIL_SMTP_LOGIN: null
+      CH_MAIL_SENDER_MAIL_SIMPLE: null
+      CH_MAIL_SENDER_MAIL: null
 
 
 auth:
