--- a/embark/Gopkg.toml
+++ b/embark/Gopkg.toml
@@ -41,3 +41,15 @@ required = [
 [[constraint]]
   name = "github.com/mholt/archiver"
   revision = "089cf0d1f58c48b3d14c76882a37708efe549e7b"
+
+[[constraint]]
+  name = "github.com/vbauerster/mpb"
+  version = "~3.3.2"
+
+[[constraint]]
+  name = "github.com/go-yaml/yaml"
+  version = "~2.2.1"
+
+[[constraint]]
+  name = "github.com/cheggaaa/pb"
+  version = "~2.0.6"
