fix image pull policy

--- a/embark/job.yaml
+++ b/embark/job.yaml
@@ -16,7 +16,8 @@ spec:
       containers:
         - name: embark
           image: twentydraft/embark
-       #   command: ["ls", "-l", "/etc/kube"]
+          imagePullPolicy: Always
+          # command: ["curl", "wttr.in"]
           volumeMounts:
             - name: kube
               mountPath: /etc/kube
