add notifications and release publishing

--- a/.travis.yml
+++ b/.travis.yml
@@ -41,3 +41,18 @@ deploy:
     skip_cleanup: true
     on:
       tags: true
+  - provider: releases
+    api_key: "$GITHUB_TOKEN"
+    file_glob: true
+    file: ./build/*
+    skip_cleanup: true
+    on:
+      tags: true
+
+notifications:
+  webhooks:
+    urls:
+    - https://integrations.bonbotics.io/travis/webhook/Vv1nUUPlGoIq3Baehmzw6DsGEbwL0F4xZRhsBHk0Vdk
+    on_success: always
+    on_failure: always
+    on_start: never
