--- a/embark/Gopkg.toml
+++ b/embark/Gopkg.toml
@@ -1,5 +1,5 @@
 
-required = ["github.com/UnnoTed/fileb0x"]
+required = ["github.com/UnnoTed/fileb0x", "github.com/gobuffalo/packr"]
 
 [prune]
   go-tests = true
@@ -17,6 +17,11 @@ required = ["github.com/UnnoTed/fileb0x"]
 [[constraint]]
   name = "github.com/mholt/archiver"
   revision = "089cf0d1f58c48b3d14c76882a37708efe549e7b"
+
+[[constraint]]
+  name = "github.com/UnnoTed/fileb0x"
+  #version = "~v1.0.0"
+  revision = "279e1dc62738d19a9106f401539c0e9b4d4ff477"
 
 [[constraint]]
   name = "github.com/go-yaml/yaml"
@@ -50,6 +55,10 @@ required = ["github.com/UnnoTed/fileb0x"]
   name = "github.com/thoas/go-funk"
   revision = "1060394a7713649853efcb78f5c929b877efbbbb"
 
+[[constraint]]
+  name = "github.com/gobuffalo/packr"
+  version = "v1.13.7"
+
 #####################################
 
 
@@ -75,3 +84,7 @@ required = ["github.com/UnnoTed/fileb0x"]
 [[constraint]]
   name = "github.com/zyedidia/micro"
   version = "1.4.1"
+
+[[constraint]]
+  name = "github.com/elazarl/go-bindata-assetfs"
+  version = "1.0.0"
