--- a/.travis.yml
+++ b/.travis.yml
@@ -18,8 +18,9 @@ install:
   - helm plugin install https://github.com/chartmuseum/helm-push
 
 script:
-  - go test ./embark/...
   - go build -v -o ./build/embark_$(go env GOOS)_$(go env GOHOSTARCH) ./embark/cmd/embark
+  - ./build/embark_$(go env GOOS)_$(go env GOHOSTARCH) download --dir ./pkg/depsearch/tesdata
+  - go test ./embark/...
   - helm repo add containerum ${MUSEUM}
   - helm package charts/$NAME --version="1.0" --dependency-update
   - rm $NAME-1.0.tgz
@@ -52,7 +53,7 @@ deploy:
 notifications:
   webhooks:
     urls:
-    - https://integrations.bonbotics.io/travis/webhook/Vv1nUUPlGoIq3Baehmzw6DsGEbwL0F4xZRhsBHk0Vdk
+      - "https://integrations.bonbotics.io/travis/webhook/Vv1nUUPlGoIq3Baehmzw6DsGEbwL0F4xZRhsBHk0Vdk"
     on_success: always
     on_failure: always
     on_start: never
