--- a/charts/containerum/Chart.yaml
+++ b/charts/containerum/Chart.yaml
@@ -1,5 +1,5 @@
 apiVersion: v1
-appVersion: "v1.0.0"
+appVersion: v1.0.0
 description: A Helm chart for Containerum
 name: containerum
-version: "v1.0.0"
+version: 1.2.0
