add embeddable help files

--- a/embark/Dockerfile
+++ b/embark/Dockerfile
@@ -7,5 +7,4 @@ RUN go install -v ./cmd/embark/
 # ---
 FROM alpine:3.7
 COPY --from=builder /go/bin/embark /embark
-COPY --from=builder /go/src/github.com/containerum/containerum/embark/charts/containerum  /charts/containerum
-ENTRYPOINT ["/embark", "--kube-config", "/etc/kube/config", "--debug", "--namespace", "containerum", "--dir", "/charts/containerum"]
+ENTRYPOINT ["/embark"]
