--- a/embark/job.yaml
+++ b/embark/job.yaml
@@ -1,7 +1,7 @@
 apiVersion: batch/v1
 kind: Job
 metadata:
-  name: containerum/embark
+  name: twentydraft/embark
   labels:
     app: containerum
     name: embark
